* Message serialization size reduced:     * By reducing data types to smaller sizes.     * By enconding parameters during serialization.