@@ -7,6 +7,7 @@ import java.io.ObjectInput;
 import java.io.ObjectOutput;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
@@ -15,6 +16,8 @@ import multicast.search.message.RemoteMessage;
 import peer.message.PayloadMessage;
 import peer.peerid.PeerID;
 import serialization.binary.UnserializationUtils;
+import taxonomy.parameter.InputParameter;
+import taxonomy.parameter.OutputParameter;
 
 public class CollisionResponseMessage extends RemoteMessage implements PayloadMessage {
 
@@ -23,23 +26,30 @@ public class CollisionResponseMessage extends RemoteMessage implements PayloadMe
 	 */
 	private static final long serialVersionUID = 1L;
 
-	private final Map<Service, Integer> serviceDistanceTable = new HashMap<Service, Integer>();
+	private final Map<Service, Byte> serviceDistanceTable = new HashMap<Service, Byte>();
 	
 	public CollisionResponseMessage() {
 		
 	}
 
-	public CollisionResponseMessage(final PeerID source, final Map<Service, Integer> serviceTable) {
+	public CollisionResponseMessage(final PeerID source, final Map<Service, Byte> serviceTable) {
 		super(source, Collections.<PeerID> emptySet());
 		serviceDistanceTable.putAll(serviceTable);
 	}
+	
+	protected CollisionResponseMessage(final CollisionResponseMessage collisionResponseMessage) {
+		super(collisionResponseMessage);
+		
+		for (final Entry<Service, Byte> entry : collisionResponseMessage.serviceDistanceTable.entrySet())
+			serviceDistanceTable.put(entry.getKey(), new Byte(entry.getValue().byteValue()));
+	}
 
 	public Set<Service> getServices() {
-		return serviceDistanceTable.keySet();
+		return new HashSet<Service>(serviceDistanceTable.keySet());
 	}
 
 	public Integer getDistance(final Service s) {
-		return serviceDistanceTable.get(s);
+		return new Integer(serviceDistanceTable.get(s).byteValue());
 	}
 
 	public boolean removeServices(final Set<Service> services) {
@@ -51,6 +61,20 @@ public class CollisionResponseMessage extends RemoteMessage implements PayloadMe
 			}
 		return removed;
 	}
+	
+	public Set<OutputParameter> getOutputParameters() {
+		final Set<OutputParameter> outputParameters = new HashSet<OutputParameter>();
+		for (final Service service : serviceDistanceTable.keySet())
+			outputParameters.addAll(service.getOutputParams());
+		return outputParameters;
+	}
+	
+	public Set<InputParameter> getInputParameters() {
+		final Set<InputParameter> inputParameters = new HashSet<InputParameter>();
+		for (final Service service : serviceDistanceTable.keySet())
+			inputParameters.addAll(service.getInputParams());
+		return inputParameters;
+	}
 
 	@Override
 	public String toString() {
@@ -58,18 +82,14 @@ public class CollisionResponseMessage extends RemoteMessage implements PayloadMe
 	}
 
 	@Override
-	public PayloadMessage copy() {
-		final Map<Service, Integer> serviceDistanceTableCopy = new HashMap<Service, Integer>();
-		for (final Entry<Service, Integer> entry : serviceDistanceTable.entrySet())
-			serviceDistanceTableCopy.put(entry.getKey(), new Integer(entry.getValue().intValue()));
-		
-		return new CollisionResponseMessage(getSource(), serviceDistanceTableCopy);
+	public PayloadMessage copy() {		
+		return new CollisionResponseMessage(this);
 	}
 
 	public void addDistance(final int distance) {
 		for (final Service service : serviceDistanceTable.keySet()) {
-			final Integer newDistance = Integer.valueOf(serviceDistanceTable.get(service).intValue() + distance);
-			serviceDistanceTable.put(service, newDistance);
+			byte newDistance = (byte)(serviceDistanceTable.get(service).intValue() + distance);
+			serviceDistanceTable.put(service, new Byte(newDistance));
 		}
 	}
 
@@ -85,6 +105,6 @@ public class CollisionResponseMessage extends RemoteMessage implements PayloadMe
 		super.writeExternal(out);
 		
 		out.writeObject(serviceDistanceTable.keySet().toArray(new Service[0]));
-		out.writeObject(serviceDistanceTable.values().toArray(new Integer[0]));
+		out.writeObject(serviceDistanceTable.values().toArray(new Byte[0]));
 	}
 }
